# diqu

./: .flake8  .gitignore  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/issue_template/: feature_request.md
.github/workflows/: ci_pr.yml  codecov.yml  docs.yml  publish.yml
0.1/: 404.html  index.html  sitemap.xml
0.1/nav/dev/: changelog.html  contributing.html
0.1/nav/guide/: cli.html  common.html  quick_start.html
0.1/nav/guide/adapters/: community_adapter.html
0.1/nav/guide/config/: usage_stats.html
0.1/nav/guide/config/alerts/: jira.html  slack.html
0.1/overrides/: main.html
0.1/search/: search_index.js  search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2/assets/js/: termynal.js
0.2/nav/dev/: contributing.html
0.2/nav/guide/: cli.html  common.html  quick_start.html
0.2/nav/guide/adapters/: community_adapter.html  using_custom_module_script.html
0.2/nav/guide/config/: usage_stats.html
0.2/overrides/: main.html
0.2/search/: search_index.js  search_index.json
ci/: profiles.yml
diqu/: __entrypoint__.py  __main__.py
diqu/alerts/: factory.py  jira.py  slack.py
diqu/cli/: common.py  main.py
diqu/sources/: base.py  csv.py  factory.py  snowflake.py
diqu/tasks/: alert.py  base.py
diqu/utils/: exception.py  jira_variable_config.py  log.py  meta.py  module.py  tracking.py  yml.py
docs/: index.md
docs/assets/css/: termynal.css
docs/assets/js/: custom.js
docs/nav/dev/: contributing.md
docs/nav/guide/: cli.md  common.md  quick_start.md  user_stats.md
docs/nav/guide/adapters/: community_adapter.md  using_custom_module_script.md
docs/nav/guide/config/: usage_stats.md
sample/: profiles.yml
tests/integration/: __init__.py  invocation.py  test_cli.py  test_runner.py
tests/unit/: __init__.py
tests/unit/alerts/: test_alert_factory.py  test_alert_jira.py  test_alert_slack.py
tests/unit/sources/: test_source_base.py  test_source_factory.py  test_source_snowflake.py
tests/unit/tasks/: test_alert_task.py
tests/unit/utils/: test_module.py  test_yml.py
(+12 files in other folders)
